--- a/main.html
+++ b/main.html
@@ -11,32 +11,36 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <input type="text" class="display" value="0.0" readonly>
-            <table>
-                <tr>
-                <td><button class="number">7</button></td>
-                <td><button class="number">8</button></td>
-                <td><button class="number">9</button></td>
-                <td><button class="operator">+</button></td>
-                </tr>
-                <tr>
-                <td><button class="number">4</button></td>
-                <td><button class="number">5</button></td>
-                <td><button class="number">6</button></td>
-                <td><button class="operator">-</button></td>
-                </tr>
-                <tr>
-                <td><button class="number">1</button></td>
-                <td><button class="number">2</button></td>
-                <td><button class="number">3</button></td>
-                <td><button class="operator">*</button></td>
-                </tr>
-                <tr>
-                <td><button class="clear">C</button></td>
-                <td><button class="number">0</button></td>
-                <td><button class="equals">=</button></td>
-                <td><button class="operator">/</button></td>
-                </tr>
+            <div class="calculator-display">
+                <input type="text" class="display" value="0.0" readonly>
+            </div>
+            <div class="calculator-buttons">
+                <table>
+                    <tr>
+                    <td><button class="number">7</button></td>
+                    <td><button class="number">8</button></td>
+                    <td><button class="number">9</button></td>
+                    <td><button class="operator">+</button></td>
+                    </tr>
+                    <tr>
+                    <td><button class="number">4</button></td>
+                    <td><button class="number">5</button></td>
+                    <td><button class="number">6</button></td>
+                    <td><button class="operator">-</button></td>
+                    </tr>
+                    <tr>
+                    <td><button class="number">1</button></td>
+                    <td><button class="number">2</button></td>
+                    <td><button class="number">3</button></td>
+                    <td><button class="operator">*</button></td>
+                    </tr>
+                    <tr>
+                    <td><button class="clear">C</button></td>
+                    <td><button class="number">0</button></td>
+                    <td><button class="equals">=</button></td>
+                    <td><button class="operator">/</button></td>
+                    </tr>
+            </div>
         </div>
     </div>
 </body>
