--- a/main.html
+++ b/main.html
@@ -15,31 +15,24 @@
                 <input type="text" class="display" value="0.0" readonly>
             </div>
             <div class="calculator-buttons">
-                <table>
-                    <tr>
-                    <td><button class="number">7</button></td>
-                    <td><button class="number">8</button></td>
-                    <td><button class="number">9</button></td>
-                    <td><button class="operator">+</button></td>
-                    </tr>
-                    <tr>
-                    <td><button class="number">4</button></td>
-                    <td><button class="number">5</button></td>
-                    <td><button class="number">6</button></td>
-                    <td><button class="operator">-</button></td>
-                    </tr>
-                    <tr>
-                    <td><button class="number">1</button></td>
-                    <td><button class="number">2</button></td>
-                    <td><button class="number">3</button></td>
-                    <td><button class="operator">*</button></td>
-                    </tr>
-                    <tr>
-                    <td><button class="clear">C</button></td>
-                    <td><button class="number">0</button></td>
-                    <td><button class="equals">=</button></td>
-                    <td><button class="operator">/</button></td>
-                    </tr>
+                <button class="btn" id="clear">C</button>
+                <button class="btn" id="backspace">&#8592;</button>
+                <button class="btn" id="divide">÷</button>
+                <button class="btn" id="multiply">x</button>
+                <button class="btn" id="seven">7</button>
+                <button class="btn" id="eight">8</button>
+                <button class="btn" id="nine">9</button>
+                <button class="btn" id="subtract">-</button>
+                <button class="btn" id="four">4</button>
+                <button class="btn" id="five">5</button>
+                <button class="btn" id="six">6</button>
+                <button class="btn" id="add">+</button>
+                <button class="btn" id="one">1</button>
+                <button class="btn" id="two">2</button>
+                <button class="btn" id="three">3</button>
+                <button class="btn" id="zero">0</button>
+                <button class="btn" id="decimal">.</button>
+                <button class="btn" id="equals">=</button>
             </div>
         </div>
     </div>
