--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="calculator">
             <div class="calculator-display">
-                <input type="text" class="display" value="0.0" readonly>
+                <input type="text" class="display" id="calculator-input" readonly>
             </div>
             <div class="calculator-buttons">
                 <button class="btn" id="clear">C</button>
@@ -37,4 +37,5 @@
         </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
