basic number display

--- a/main.html
+++ b/main.html
@@ -12,7 +12,8 @@
     <div class="container">
         <div class="calculator">
             <div class="calculator-display">
-                <input type="text" class="display" id="calculator-input" readonly>
+                <div class="display" id="display-input" type="text"> </div>
+                <div class="display" id="display-current" type="text"> </div>
             </div>
             <div class="calculator-buttons">
                 <button class="btn" id="clear">C</button>
