--- a/main.html
+++ b/main.html
@@ -13,27 +13,31 @@
         <div class="calculator">
             <div class="calculator-display">
                 <div class="display" id="display-input" type="text"> </div>
-                <div class="display" id="display-current" type="text"> </div>
+                <div class="display" id="display-current" type="text">0</div>
             </div>
             <div class="calculator-buttons">
                 <button class="btn" id="clear">C</button>
                 <button class="btn" id="backspace">&#8592;</button>
-                <button class="btn" id="divide">÷</button>
-                <button class="btn" id="multiply">x</button>
-                <button class="btn" id="seven">7</button>
-                <button class="btn" id="eight">8</button>
-                <button class="btn" id="nine">9</button>
-                <button class="btn" id="subtract">-</button>
-                <button class="btn" id="four">4</button>
-                <button class="btn" id="five">5</button>
-                <button class="btn" id="six">6</button>
-                <button class="btn" id="add">+</button>
-                <button class="btn" id="one">1</button>
-                <button class="btn" id="two">2</button>
-                <button class="btn" id="three">3</button>
-                <button class="btn" id="zero">0</button>
+                <button class="btn operator" id="divide">÷</button>
+                <button class="btn operator" id="multiply">x</button>
+
+                <button class="btn number" id="seven">7</button>
+                <button class="btn number" id="eight">8</button>
+                <button class="btn number" id="nine">9</button>
+                <button class="btn operator" id="subtract">-</button>
+
+                <button class="btn number" id="four">4</button>
+                <button class="btn number" id="five">5</button>
+                <button class="btn number" id="six">6</button>
+                <button class="btn operator" id="add">+</button>
+
+                <button class="btn number" id="one">1</button>
+                <button class="btn number" id="two">2</button>
+                <button class="btn number" id="three">3</button>
+
+                <button class="btn number" id="zero">0</button>
                 <button class="btn" id="decimal">.</button>
-                <button class="btn" id="equals">=</button>
+                <button class="btn operator" id="equals">=</button>
             </div>
         </div>
     </div>
