backspace to ce and style change

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
             </div>
             <div class="calculator-buttons">
                 <button class="btn" id="clear">C</button>
-                <button class="btn" id="backspace">&#8592;</button>
+                <button class="btn" id="clear-entry">CE</button>
                 <button class="btn operator" id="divide">÷</button>
                 <button class="btn operator" id="multiply">x</button>
 
