--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 
                 <button class="btn number" id="zero">0</button>
                 <button class="btn" id="decimal">.</button>
-                <button class="btn operator" id="equals">=</button>
+                <button class="btn" id="equals">=</button>
             </div>
         </div>
     </div>
